--- a/src/app/EduSchoolBackOffice/Components/GestionPedagogique/GestionHomeWork/gestion-homework/list-homework/list-homework.component.html
+++ b/src/app/EduSchoolBackOffice/Components/GestionPedagogique/GestionHomeWork/gestion-homework/list-homework/list-homework.component.html
@@ -1,1 +1,62 @@
-<p>list-homework works!</p>
+<mat-card>
+  <mat-card-header>
+    <mat-form-field>
+      <input matInput (keyup)="filterChange($event)" placeholder="Enter the text" />
+    </mat-form-field>
+    <div class="align">
+      <button mat-raised-button class="btn btn-primary" type="button" (click)="ajouterHomework()">Ajouter Homework</button>
+    </div>
+  </mat-card-header>
+  <mat-card-content>
+
+    <table matSort mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+
+        <ng-container matColumnDef="sujet">
+          <th mat-sort-header mat-header-cell *matHeaderCellDef> Sujet</th>
+          <td mat-cell *matCellDef="let element">{{element.sujet}}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="dateRemis">
+            <th mat-sort-header mat-header-cell *matHeaderCellDef> Date Remis</th>
+            <td mat-cell *matCellDef="let element">{{element.dateRemise}}</td>
+          </ng-container>
+
+          <ng-container matColumnDef="dateRecu">
+            <th mat-sort-header mat-header-cell *matHeaderCellDef> Date Reçu</th>
+            <td mat-cell *matCellDef="let element">{{element.dateRecu}}</td>
+          </ng-container>
+
+          <ng-container matColumnDef="Classe">
+            <th mat-sort-header mat-header-cell *matHeaderCellDef> Classe</th>
+            <td mat-cell *matCellDef="let element">{{element.classeHomework.nom}}</td>
+          </ng-container>
+
+          <ng-container matColumnDef="matiere">
+            <th mat-sort-header mat-header-cell *matHeaderCellDef> Matiére</th>
+            <td mat-cell *matCellDef="let element">{{element.matiereHomework.nom}}</td>
+          </ng-container>
+
+          <ng-container matColumnDef="action">
+            <th mat-header-cell mat-sort-header *matHeaderCellDef> Action</th>
+            <td mat-cell *matCellDef="let element">
+                <i (click)="editHomework(element.id)" class='fas fa-edit'></i>
+                <i (click)="deleteHomework(element.id)" class='fas fa-trash-alt'></i>
+                <i (click)="detailHomework(element.id)"  class='fas fa-eye'></i>
+              
+            </td>
+          </ng-container>
+
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row;columns:displayedColumns"></tr>
+
+    </table>
+
+  </mat-card-content>
+<br>
+<mat-card-footer>
+
+    <mat-paginator [pageSizeOptions]="[5,10,20]" showFirstLastButtons></mat-paginator>
+
+</mat-card-footer>
+</mat-card>
