--- a/src/app/EduSchoolBackOffice/Components/GestionPedagogique/GestionExamen/ajouter-examen/ajouter-examen.component.html
+++ b/src/app/EduSchoolBackOffice/Components/GestionPedagogique/GestionExamen/ajouter-examen/ajouter-examen.component.html
@@ -1,35 +1,66 @@
 <div class="container" style="margin-top:50px ;">
     <div class="row">
-        <div class="col-md-10">
-          
-          <full-calendar [options]="calendarOptions" ></full-calendar>
+        <div class="col-md-10 mr-10">
+            <full-calendar [options]="calendarOptions" ></full-calendar>
 
         </div>
         <div class="col-md-2" >
-            <form #addeventForm="ngForm" (ngSubmit)="saveEvent()" *ngIf="!connected">
-                
-                
-                <h3>ajouter </h3>
+            <form [formGroup]="examenForm" (ngSubmit)="ajouterExamen()">
+                <h3>Ajouter</h3>
                 <div class="mb-3">
-                    <label class="form-label">Nom de cour </label>
-                    <input type="text" class="form-control"    [(ngModel)]="event.title"
-                    [ngModelOptions]="{standalone: true}" required >
+                    <label class="form-label">Examen</label>
+                    <mat-radio-group formControlName="examen">
+                        <mat-radio-button [value]="'ORALE'">Orale</mat-radio-button>
+                        <mat-radio-button [value]="'ECRIT'">Ecrit</mat-radio-button>
+                      </mat-radio-group>
+                </div>
+                <div class="mb-3">
+                    <label class="form-label">Matière</label>
+                    <select formControlName="matiere" class="form-select" id="validationCustom04" required>
+                        <option value="">....Select...</option>
+                        <option *ngFor="let matiere of matieres" [value]="matiere.id">{{ matiere.nom }}</option>
+                    </select>
+                    <div *ngIf=" examenForm.get('matiere')?.errors?.['required']" class="invalid-feedback">
+                        <div>La matière est obligatoire</div>
+                    </div>
+                </div>
+                <div class="mb-3">
+                    <label class="form-label">Classe</label>
+                    <select formControlName="classe"   
+                    multiple       
+                    class="form-select" id="validationCustom04" 
+                    [ngClass]="{'is-invalid':examenForm.get('classe')?.touched && !examenForm.get('classe')?.valid}"
+                  
+                    >
+                        <option [value]="">....Select...</option>
+                        <option *ngFor="let classe of classes" [value]="classe.id">{{ classe.nom }}</option>
+                    </select>
+                      
+                    <div class="invalid-feedback">
+                        <span *ngIf="examenForm.get('classe')?.errors?.['required']">Selectionné le classe </span>
+                    </div>
                    
                 </div>
                 <div class="mb-3">
-                    <label  class="form-label">date debut</label>
-                    <input type="datetime-local" class="form-control"   [(ngModel)]="event.date"
-                    [ngModelOptions]="{standalone: true}" required>
-                   
+                    <label class="form-label">Date </label>
+                    <input type="datetime-local" class="form-control" formControlName="date" required>
+                    <div *ngIf=" examenForm.get('date')?.errors?.['required']" class="invalid-feedback">
+                        <div>La date est obligatoire</div>
+                    </div>
                 </div>
                 <div class="mb-3">
-                    <label class="form-label">date fin</label>
-                    <input type="datetime-local" class="form-control"[(ngModel)]="event.datefin"
-                    [ngModelOptions]="{standalone: true}" required>
-                   
+                    <label class="form-label">Salle</label>
+                    <select formControlName="salle" class="form-select" id="validationCustom04" required>
+                        <option value="">....Select...</option>
+                        <option *ngFor="let salle of salles" [value]="salle.id">{{ salle.num }}</option>
+                    </select>
+                    <div *ngIf=" examenForm.get('salle')?.errors?.['required']" class="invalid-feedback">
+                        <div>La salle est obligatoire</div>
+                    </div>
                 </div>
                 <button type="submit" class="btn btn-primary">Ajouter</button>
             </form>
+            
         </div>
     </div>
 
