modif gestion classe

--- a/src/app/EduSchoolBackOffice/Components/Dashboards/dashboard/dashboard.component.html
+++ b/src/app/EduSchoolBackOffice/Components/Dashboards/dashboard/dashboard.component.html
@@ -71,7 +71,6 @@
           <mat-menu #menu1="matMenu">
               <button mat-menu-item routerLink="classe"  >Classe</button>
               <button mat-menu-item routerLink="matiere">Matière</button>
-              <button mat-menu-item routerLink="emplois-temps">Emplois du temps</button>
               <button mat-menu-item routerLink="resultat">Resultat</button>
           </mat-menu>
       </button>
@@ -93,6 +92,11 @@
       <button mat-button class="menu-button" routerLink="cantine">
         <mat-icon> fastfood</mat-icon>
           <span>Gestion Cantine</span>
+      </button>
+      <mat-divider></mat-divider>
+      <button mat-button class="menu-button" routerLink="salle">
+        <mat-icon> meeting_room</mat-icon>
+          <span>Gestion Salle</span>
       </button>
       <mat-divider></mat-divider>
       <button mat-button class="menu-button" >
