--- a/src/app/EduSchoolBackOffice/Components/gestionCantine/group-user/group-user.component.html
+++ b/src/app/EduSchoolBackOffice/Components/gestionCantine/group-user/group-user.component.html
@@ -8,7 +8,7 @@
                 Nom Responsable Mme <span style="font-weight: bold;">{{groupCantine[0]["nomResponsable"]}}</span>
                 <br>
                 <br>
-                Téléphone Mme <span style="font-weight: bold;">{{groupCantine[0]["telephone"]}}</span>
+                Téléphone  <span style="font-weight: bold;">{{groupCantine[0]["telephone"]}}</span>
             </div>
         </div>
        </div>
