--- a/src/app/EduSchoolBackOffice/Components/gestionPedagogique/classe/emplois-temps/emplois-temps.component.html
+++ b/src/app/EduSchoolBackOffice/Components/gestionPedagogique/classe/emplois-temps/emplois-temps.component.html
@@ -1,34 +1,55 @@
 <div class="container" style="margin-top:50px ;">
   <div class="row">
-      <div class="col-md-10">
 
+      <div class="col-md-9">
+          <h1>Emplois du temps de la classe {{classe.nom}} </h1>
           <full-calendar  [options]="calendarOptions" ></full-calendar>
 
       </div>
-      <div class="col-md-2" >
-          <form #addeventForm="ngForm" (ngSubmit)="saveEvent()" >
-
-
-              <h3>ajouter </h3>
-              <div class="mb-3">
-                  <label class="form-label">Nom de cour </label>
-                  <input type="text" class="form-control"    [(ngModel)]="event.title"
-                  [ngModelOptions]="{standalone: true}" required >
-
+      <div *ngIf="visible" class="col-md-3"  >
+          <form  [formGroup]="addeventform"  >
+              <h3>Ajouter nouvelle cours </h3>
+              <div class="form-row">
+                <div class="col-md-12">
+                    <label for="validationCustom04" class="form-label" >Identifiant de la matiére <span style="color: red;">*</span></label>
+                  <input type="text" class="form-control" formControlName="idMat" >
+                <div *ngIf="validateError('idMat','required') && submitted"  >
+                  <div  class="alert alert-danger">Identifiant de la matiére est Obligatoire </div>
+                </div>
+                </div>
               </div>
-              <div class="mb-3">
-                  <label  class="form-label">date debut</label>
-                  <input type="time-local" class="form-control"   [(ngModel)]="event.date"
-                  [ngModelOptions]="{standalone: true}" required>
-
+              <div class="form-row">
+                <div class="col-md-12">
+                    <label for="validationCustom04" class="form-label" >Jour de la semaine <span style="color: red;">*</span></label>
+                    <select class="form-select" required formControlName="jour">
+                      <option *ngFor="let n of jours" [value]="n">{{n}}</option>
+                    </select>
+                    <div *ngIf="addeventform.get('jour')?.value==='-- Sélectionner un jour --' && submitted"  >
+                      <div  class="alert alert-danger">selectionner un jour</div>
+                    </div>
+                </div>
               </div>
-              <div class="mb-3">
-                  <label class="form-label">date fin</label>
-                  <input type="time-local" class="form-control"[(ngModel)]="event.datefin"
-                  [ngModelOptions]="{standalone: true}" required>
-
+              <div class="form-row">
+                <div class="col-md-12">
+                    <label for="validationCustom04" class="form-label" >Heure Début  <span style="color: red;">*</span></label>
+                  <input type="time" class="form-control" formControlName="heureD" >
+                <div *ngIf="validateError('heureD','required') && submitted"  >
+                  <div  class="alert alert-danger">Heure est Obligatoire </div>
+                </div>
+                </div>
               </div>
-              <button type="submit" class="btn btn-primary">Ajouter</button>
+              <div class="form-row">
+                <div class="col-md-12">
+                    <label for="validationCustom04" class="form-label" >Heure Fin <span style="color: red;">*</span></label>
+                  <input type="time" class="form-control" formControlName="heureF" >
+                <div *ngIf="validateError('heureF','required') && submitted"  >
+                  <div  class="alert alert-danger">Heure est Obligatoire </div>
+                </div>
+                </div>
+              </div>
+              <div class="form-group">
+                <button type="submit" class="btn btn-block add" [disabled]="addeventform.invalid" (click)="addCour()">Ajouter</button>
+            </div>
           </form>
       </div>
   </div>
