--- a/src/app/EduSchoolBackOffice/Components/gestionPedagogique/matiere/add-matiere/add-matiere.component.html
+++ b/src/app/EduSchoolBackOffice/Components/gestionPedagogique/matiere/add-matiere/add-matiere.component.html
@@ -22,12 +22,7 @@
             <label for="validationCustom04" class="form-label" >Niveau de la matiere <span style="color: red;">*</span></label>
             <select class="form-select" required formControlName="niveau">
               <option value="-- Sélectionner un niveau --"  selected>-- Sélectionner un niveau --</option>
-              <option value="PREMIERE">PREMIERE</option>
-              <option value="DEUXIEME">DEUXIEME</option>
-              <option value="TROISIEME">TROISIEME</option>
-              <option value="QUATRIEME">QUATRIEME</option>
-              <option value="CINQUIEME">CINQUIEME</option>
-              <option value="SIXIEME">SIXIEME</option>
+              <option *ngFor="let n of niveaux" [value]="n">{{n}}</option>
             </select>
             <div *ngIf="matiereForm.get('niveau')?.value==='-- Sélectionner un niveau --' && submitted"  >
               <div  class="alert alert-danger">selectionner un niveau</div>
