update gestion classe : enseignant et eleve

--- a/src/app/EduSchoolBackOffice/Components/gestionPedagogique/classe/enseignantClasse/affecter-enseignant/affecter-enseignant.component.html
+++ b/src/app/EduSchoolBackOffice/Components/gestionPedagogique/classe/enseignantClasse/affecter-enseignant/affecter-enseignant.component.html
@@ -1,3 +1,6 @@
+<div  routerLink="../enseignant-classe">
+  <mat-icon>arrow_back_ios</mat-icon>
+</div>
 <div class="registration-form">
   <form  [formGroup]="clEnsForm">
 
