--- a/src/app/EduSchoolBackOffice/Components/gestionPedagogique/classe/add-classe/add-classe.component.html
+++ b/src/app/EduSchoolBackOffice/Components/gestionPedagogique/classe/add-classe/add-classe.component.html
@@ -1,3 +1,7 @@
+<div  routerLink="../classe">
+  <mat-icon>arrow_back_ios</mat-icon>
+</div>
+
 <div class="registration-form">
   <form  [formGroup]="classeForm">
 
