--- a/src/app/EduSchoolBackOffice/Components/gestionPedagogique/classe/detail-classe/detail-classe.component.html
+++ b/src/app/EduSchoolBackOffice/Components/gestionPedagogique/classe/detail-classe/detail-classe.component.html
@@ -1,4 +1,7 @@
 <div class="container">
+  <div class="row" routerLink="../classe">
+    <mat-icon>arrow_back_ios</mat-icon>
+  </div>
   <div class="row">
     <div class="col" (click)="openCardDetails(1)">
       <div class="card custom-card">
