--- a/src/app/EduSchoolBackOffice/Components/gestionPedagogique/classe/eleveClasse/eleve-classe/eleve-classe.component.html
+++ b/src/app/EduSchoolBackOffice/Components/gestionPedagogique/classe/eleveClasse/eleve-classe/eleve-classe.component.html
@@ -8,8 +8,8 @@
           <mat-icon>arrow_back_ios</mat-icon>
         </div>
         <h1 class="title">Listes des Enseignants dans la classe {{classe.nom}} </h1>
-        <button id="btnAdd" type="button" class="btn btn-info" (click)="goToAffecterEleve()">Affecter
-          enseignant</button>
+        <button id="btnAdd" type="button" class="btn btn-info" (click)="isPopupOpen=true">Affecter
+          éléve</button>
       </div>
     </div>
     <div class="table-responsive">
@@ -29,6 +29,15 @@
 
 
 
+  </div>
+
+  <div class="popup" *ngIf="isPopupOpen">
+    <div class="popup-content">
+      <span class="close-btn" (click)="closePopup()">&times;</span>
+      <p>Enter some text:</p>
+      <input type="text" />
+      <button (click)="affecterEleve()">Submit</button>
+    </div>
   </div>
 
 </div>
