--- a/src/app/EduSchoolBackOffice/Components/Dashboards/dashboard/dashboard.component.html
+++ b/src/app/EduSchoolBackOffice/Components/Dashboards/dashboard/dashboard.component.html
@@ -101,9 +101,9 @@
           <span>Gestion Cantine</span>
       </button>
       <mat-divider></mat-divider>
-      <button mat-button class="menu-button" >
+      <button mat-button class="menu-button" (click)="navigateToUserList()">
         <mat-icon>person_outline</mat-icon>
-          <span>Gestion Comptes</span>
+        <span>Gestion Comptes</span>
       </button>
       <mat-divider></mat-divider>
       <button mat-button class="menu-button" (click)="logout()">
