--- a/src/app/EduSchoolBackOffice/Components/Dashboards/dashboard/dashboard.component.html
+++ b/src/app/EduSchoolBackOffice/Components/Dashboards/dashboard/dashboard.component.html
@@ -80,7 +80,7 @@
           <mat-icon>no_meeting_room</mat-icon>
           <span>Gestion des Présence</span>
           <mat-menu #menu="matMenu">
-              <button mat-menu-item routerLink="statuscongesens">Gestion des absence</button>
+              <button mat-menu-item routerLink="Add-Absence">Gestion des absence</button>
               <button mat-menu-item routerLink="addconges">Gestion des congés</button>
               <button mat-menu-item routerLink="">Gestion des abscences</button>
           </mat-menu>
