--- a/src/app/EduSchoolBackOffice/table/table.component.css
+++ b/src/app/EduSchoolBackOffice/table/table.component.css
@@ -2,3 +2,22 @@
   background-color: transparent;
 }
 
+
+
+.status-pending {
+  background-color: yellow;
+  border-radius: 5px;
+  position:absolute;
+}
+
+.status-rejected {
+  background-color: red;
+  border-radius: 5px;
+  position:absolute;
+}
+
+.status-approved {
+  background-color: green;
+  border-radius: 5px;
+  position:absolute;
+}
