--- a/src/app/EduSchoolBackOffice/table/table.component.html
+++ b/src/app/EduSchoolBackOffice/table/table.component.html
@@ -1,8 +1,8 @@
 <ng-container>
 
   <!-- Filter -->
-  <ng-container  *ngIf="isFilterable">
-      <mat-form-field>
+  <ng-container *ngIf="isFilterable">
+    <mat-form-field>
       <input matInput (keyup)="applyFilter($event)" placeholder="filter">
     </mat-form-field>
   </ng-container>
@@ -28,17 +28,20 @@
         </th>
       </ng-template>
 
-     <!-- column data -->
-     <td mat-cell *matCellDef="let element" [class.text-right]="tableColumn.position == 'right'">
-      {{element[tableColumn.dataKey] }}
-    </td>
+      <!-- column data -->
+      <td mat-cell *matCellDef="let element" [class.text-right]="tableColumn.position == 'right'"
+          [ngClass]="{'status-pending': element[tableColumn.dataKey] === 'pending',
+                      'status-rejected': element[tableColumn.dataKey] === 'rejected',
+                      'status-approved': element[tableColumn.dataKey] === 'approved'}">
+        {{element[tableColumn.dataKey]}}
+      </td>
 
     </ng-container>
 
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 
     <ng-container *ngIf="rowActionEditIcon?.length" [matColumnDef]="rowActionEditIcon">
-      <th mat-header-cell *matHeaderCellDef >Actions</th>
+      <th mat-header-cell *matHeaderCellDef>Actions</th>
       <td mat-cell *matCellDef="let element" [id]="rowActionEditIcon" (click)="emitRowEditAction(element)">
         <button mat-button>
           <mat-icon>{{rowActionEditIcon}}</mat-icon>
@@ -53,7 +56,7 @@
         </button>
       </td>
     </ng-container>
-    <ng-container *ngIf=" isDetailIcon && rowActionDetailIcon?.length" [matColumnDef]="rowActionDetailIcon">
+    <ng-container *ngIf="isDetailIcon && rowActionDetailIcon?.length" [matColumnDef]="rowActionDetailIcon">
       <th mat-header-cell *matHeaderCellDef></th>
       <td mat-cell *matCellDef="let element" [id]="rowActionDetailIcon" (click)="emitRowDetailAction(element)">
         <button mat-button>
@@ -61,8 +64,6 @@
         </button>
       </td>
     </ng-container>
-
-
 
   </table>
 
